--- a/ninja_gold.html
+++ b/ninja_gold.html
@@ -17,6 +17,7 @@
                     padding: 10px;
                     width: 180px;
                     text-align: center;
+                    height: 90px;
                 }
 
                 .goldamt {
@@ -40,10 +41,15 @@
                     margin-top:35px;
                 }
 
+                .gold h4 {
+                    margin-bottom: 20px;
+                }
+
                 .activities textarea{
-                    border: black solid 1px;
+                    border: black solid 2px;
                     width: 950px;
                     height: 100px;
+                    color: {{session['color']}};
                 }
             </style>
     </head>
